--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.0.3",
     "mini-css-extract-plugin": "^2.4.5",
     "prettier": "^2.5.1",
     "webpack": "^5.65.0",
