--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,11 @@
     ["@babel/plugin-transform-react-jsx", {
       "pragma":"vdom.createElement",
       "throwIfNamespace": false
+    }],
+    ["@babel/plugin-transform-regenerator",{
+      "asyncGenerators": true,
+      "generators": true,
+      "async": true
     }]
   ]
 }
