--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/core": "^7.16.5",
     "@babel/plugin-transform-react-jsx": "^7.16.5",
+    "@babel/plugin-transform-regenerator": "^7.18.6",
     "@babel/preset-env": "^7.16.5",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
